@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.seren" version="1.0.21" name="Seren" provider-name="Nixgates">
+<addon id="plugin.video.seren" version="1.0.22" name="Seren" provider-name="Nixgates">
 	<requires>
 		<import addon="xbmc.python" version="2.19.0" />
 		<import addon="script.module.requests" version="2.19.1" />
@@ -29,6 +29,9 @@
 			<fanart>fanart-fox-gold-final.png</fanart>
 		</assets>
 		<news>
+Changelog 1.0.22:
+Fixed Background Scraping Display style
+
 Changelog 1.0.21:
 Fixed issue with Custom Providers refresh not honoring disabled status (Actually this time)
 Added try/except for property/progress updates in getSources module
